Add Woodworking and Software Pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <p>Hello welcome to my blog</p>
         <img alt ="Portrait"
         src="file:///Users/evandiep/vsProjects/testSite/Photo%20on%201-2-23%20at%201.53%20PM.png">
-
+        
+        <nav>
+            <a href="file:///Users/evandiep/BlogSite/woodWorkingPage.html">Wood Working Page</a> |
+            <a href="file:///Users/evandiep/BlogSite/softwarePage.html">Software Page</a> |
+          </nav>
     </body>
 </html>
