Introduce CSS, time for some style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    
+    <link rel="stylesheet" href ="style_sheet.css">
         <meta charset = "UTF-8">
         <title>Evan's Website</title>
     </head>
     <body>
-        <h1>Diep Designs</h1>
-        <p>Hello welcome to my blog</p>
-        <img alt ="Portrait"
-        src="file:///Users/evandiep/vsProjects/testSite/Photo%20on%201-2-23%20at%201.53%20PM.png">
-        
+        <h1>evdiep</h1> 
         <nav>
             <a href="file:///Users/evandiep/BlogSite/woodWorkingPage.html">Wood Working Page</a> |
             <a href="file:///Users/evandiep/BlogSite/softwarePage.html">Software Page</a> |
           </nav>
+        <img alt ="Portrait"
+        src="images/portrait.png" style= "max-width: 20%;">
+        <p>Hello welcome to my blog</p>
+
     </body>
 </html>
