--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
     <head>
     <link rel="stylesheet" href ="style_sheet.css">
         <meta charset = "UTF-8">
-        <title>Evan's Website</title>
+        <title>Evan Diep</title>
+    <link rel="icon" type="image/x_icon" href = "images/favicon.jpeg">
     </head>
     <body>
         <h1>evdiep</h1> 
-        <nav>
-            <a href="file:///Users/evandiep/BlogSite/woodWorkingPage.html">Wood Working Page</a> |
-            <a href="file:///Users/evandiep/BlogSite/softwarePage.html">Software Page</a> |
-          </nav>
-        <img alt ="Portrait"
-        src="images/portrait.png" style= "max-width: 20%;">
-        <p>Hello welcome to my blog</p>
+        <div class = "box nav">
+            <a href="#home" class="active">Home</a>
+            <a href="woodWorkingPage.html" class="active">Woodworking</a>
+            <a href="softwarePage.html" class="active">Software</a>
+            <a href="#scratchPage.html" class="active">Scratch Projects</a>
+        </div>
+        <div class = "box">
+            <img alt ="Portrait not loaded"
+        src="images/portrait.pn" style= "max-width: 20%;">
+        <p>This is a site to showcase and play around with web development</p>
+        </div>
 
     </body>
 </html>
