more css mods git status q

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class = "box">
             <img alt ="Portrait not loaded"
-        src="images/portrait.pn" style= "max-width: 20%;">
+        src="images/portrait.png">
         <p>This is a site to showcase and play around with web development</p>
         </div>
 
