--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <script src="https://kit.fontawesome.com/0fcc7aee0a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href ="style_sheet.css">
         <meta charset = "UTF-8">
         <title>Evan Diep</title>
@@ -8,6 +10,14 @@
     </head>
     <body>
         <h1>evdiep</h1> 
+        <div class ="grid-container">
+            <div>Home</div>
+            <div>
+                <i class="fa-solid fa-hammer"></i>
+                Woodworking</div>
+            <div>Software</div>
+            <div>Scratch</div>
+        </div>
         <div class = "box nav">
             <a href="#home" class="active">Home</a>
             <a href="woodWorkingPage.html" class="active">Woodworking</a>
